@@ -2,20 +2,12 @@
 # For details: https://bitbucket.org/ned/coveragepy/src/default/NOTICE.txt
 
 # MANIFEST.in file for coverage.py
-recursive-include coverage/ctracer *
-recursive-include coverage/fullcoverage *
-recursive-include coverage/htmlfiles *
 
-include coverage.egg-info/*.*
-include setup.py
 include __main__.py
-include README.rst
-include CHANGES.txt
 include AUTHORS.txt
-include requirements.pip
-include igor.py
-include tox.ini
+include CHANGES.txt
+include LICENSE.txt
+include NOTICE.txt
+include README.rst
 
-recursive-include tests *
-recursive-include doc *.rst
-global-exclude *.pyc
+recursive-include coverage/fullcoverage *
